# FruityWolf

./: .gitignore  BUILD.md  BUILD_ALL.md  BUILD_TROUBLESHOOTING.md  BUILD_WARNINGS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  FIXES.md  LICENSE  QUICK_BUILD.md  README.md  ROADMAP.md  SECURITY.md  SHARING_COMPARISON.md  build.py  config.json  config.sample.json  installer.nsi  project_view_ui_demo.html  pyproject.toml  requirements-minimal.txt  requirements.txt  run.bat  run.ps1  test_classifier.py
.cursor/commands/: command.md
FruityWolf/: __init__.py  __main__.py  app.py
FruityWolf/analysis/: __init__.py  detector.py  worker_process.py
FruityWolf/classifier/: __init__.py  engine.py  fl_truth_rules.json
FruityWolf/core/: __init__.py  activity_heat.py  config.py  stats_service.py
FruityWolf/database/: __init__.py  migrations.py  models.py  project_metadata.py  tags.py
FruityWolf/flp_parser/: __init__.py  compatibility.py  parser.py
FruityWolf/player/: __init__.py  audio_player.py
FruityWolf/rendering/: backup_exclusion.py  engine.py  fl_cli.py
FruityWolf/scanner/: __init__.py  file_watcher.py  (+4 more)
assets/: README.md
docs/: README.md  architecture.md  building.md  configuration.md  development.md  installation.md  plugin-matching-system.md  plugin-page-performance-diagnosis.md
memory-bank/: FruityWolf_Doctrine.md  QUICK_REFERENCE.md  activeContext.md  codebaseReport.md  dailySyncCommand.md  ecosystemDocumentation.md  featureChecklist.md  optimizationOpportunities.md  progress.md  projectBrief.md  systemHealth.md  systemPatterns.md  techContext.md  workflowSystem.md
qml/: FirstRunWizard.qml  Icons.qml  Main.qml  PlaylistPage.qml  ProjectPage.qml  SettingsPage.qml  Theme.qml  qmldir
scripts/: check_dates.py  check_fabfilter.py  check_library_tracks.py  check_project_files.py  check_renders.py  create_icon.py  debug_flp_parser.py  debug_renders.py  fix_project_dates.py  fix_schema.py  fix_track_dates.py  run_migrations.py  setup_dev_windows.ps1  verify_env.py
tests/: IDENTITY_SYSTEM_TEST_SUMMARY.md  __init__.py  test_adapter_fl_studio.py  test_analysis.py  test_database.py  test_duplicate_render_paths.py  test_flat_folder_matching.py  test_identity_fingerprint.py  test_identity_integration.py  test_identity_signals.py  test_identity_store.py  test_scanner.py  test_sorting_behavior.py  test_utils.py
(+74 files in other folders)
