[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-library-pro"
version = "1.0.0"
description = "A Spotify-like library manager and player for FL Studio project folders"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "FL Library Pro Team"}
]
keywords = [
    "fl-studio",
    "music",
    "audio",
    "library",
    "player",
    "producer"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

dependencies = [
    "PySide6>=6.6.0",
    "python-vlc>=3.0.20",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "mutagen>=1.47.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
analysis = [
    "scipy>=1.11.0",
    "librosa>=0.10.1",
]
dev = [
    "black>=23.12.0",
    "ruff>=0.1.9",
    "pytest>=7.4.0",
    "pyinstaller>=6.3.0",
]
full = [
    "fl-library-pro[analysis,dev]",
    "Pillow>=10.1.0",
]

[project.scripts]
FruityWolf = "FruityWolf.__main__:main"

[project.gui-scripts]
FruityWolf-gui = "FruityWolf.app:main"

[project.urls]
"Homepage" = "https://github.com/FruityWolf/FruityWolf"
"Bug Tracker" = "https://github.com/FruityWolf/FruityWolf/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["FruityWolf*"]

[tool.setuptools.package-data]
FruityWolf = ["*.qml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
